Meta tags added

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,17 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/devchallenges.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
 
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="Maintain your tasks easily. Remembers everything. Switch between active, completed and all tasks."
+		/>
+
+		<meta name="author" content="Vatsal Singh" />
+
+		<meta
+			name="keywords"
+			content="todo, todo list, todo app, web app, react app, app"
 		/>
 
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/devchallenges.png" />
@@ -26,6 +32,41 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+
+		<meta property="og:url" content="https://todo-kv.netlify.app/" />
+
+		<meta property="og:title" content="Todo App" />
+
+		<meta
+			property="og:description"
+			content="Maintain your tasks easily. Remembers everything. Switch between active, completed and all tasks."
+		/>
+
+		<meta
+			property="og:image"
+			itemprop="image"
+			content="https://user-images.githubusercontent.com/68834718/152794002-0e7bc583-084b-4c39-83bb-d82d5dd642b2.png"
+		/>
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+
+		<meta property="twitter:url" content="https://todo-kv.netlify.app/" />
+
+		<meta property="twitter:title" content="Todo App" />
+
+		<meta
+			property="twitter:description"
+			content="Maintain your tasks easily. Remembers everything. Switch between active, completed and all tasks."
+		/>
+
+		<meta
+			property="twitter:image"
+			content="https://user-images.githubusercontent.com/68834718/152794002-0e7bc583-084b-4c39-83bb-d82d5dd642b2.png"
+		/>
 
 		<!-- Google fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
